wip: fixed add/import accounts with new address stuff

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,8 +30,8 @@
     "dev": "npm run dev:ios",
     "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
     "start:android": "react-native run-android",
-    "start:metro" : "react-native start",
-    "start:devtools" : "react-devtools",
+    "start:metro": "react-native start",
+    "start:devtools": "react-devtools",
     "start": "concurrently npm:start:*",
     "postinstall": "npm run link",
     "link": "react-native link",
@@ -46,6 +46,10 @@
     "@burstjs/crypto": "^0.4.1",
     "@burstjs/http": "^0.4.1",
     "@burstjs/util": "^0.4.1",
+    "@signumjs/core": "^1.0.0-rc.3",
+    "@signumjs/crypto": "^1.0.0-rc.3",
+    "@signumjs/http": "^1.0.0-rc.3",
+    "@signumjs/util": "^1.0.0-rc.3",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "^0.1.10",
