--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+//    "baseUrl": "./src",
     "skipLibCheck": true,
     /* Basic Options */
     "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
@@ -41,7 +42,9 @@
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
-    // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+//     "paths": {
+//         "@signumjs/*": ["../../lib/packages/*"]
+//     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "types": [
@@ -68,5 +71,5 @@
   "exclude": [
     "**/node_modules/*",
     ".npm"
-  ]
+  ],
 }
