chore: renamed a step in gh wf

--- a/.github/workflows/build-signumjs.yml
+++ b/.github/workflows/build-signumjs.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 12
 
-      - name: Run BurstJS Tests
+      - name: Run SignumJS Tests
         run: |
           npm ci
           npm t
