--- a/mobile/package.json
+++ b/mobile/package.json
@@ -58,6 +58,7 @@
     "@signumjs/crypto": "^1.0.0-rc.3",
     "@signumjs/http": "^1.0.0-rc.3",
     "@signumjs/util": "^1.0.0-rc.3",
+    "css-tree": "1.0.0-alpha.39",
     "d3-shape": "^1.3.5",
     "i18n-js": "^3.2.2",
     "lodash": "^4.17.21",
@@ -72,10 +73,11 @@
     "react-native-picker-select": "^7.0.0",
     "react-native-push-notification": "^4.0.0",
     "react-native-qrcode-scanner": "^1.4.1",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
