chore: layout improvements on account creation

--- a/mobile/ios/mobile/Info.plist
+++ b/mobile/ios/mobile/Info.plist
@@ -26,6 +26,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>burst</string>
+				<string>signum</string>
 			</array>
 		</dict>
 	</array>
