refactor: app settings and automatic node selection (wip)

--- a/mobile/.env.production
+++ b/mobile/.env.production
@@ -4,7 +4,7 @@
 DEFAULT_PASSCODE_TIME="600000"
 DEFAULT_NODE_HOST="https://europe1.signum.network"
 # list of selectable nodes - separate them using ';'
-RELIABLE_NODE_HOSTS="https://europe.signum.network;https://europe1.signum.network;https://europe2.signum.network;https://europe3.signum.network;https://brazil.signum.network;https://uk.signum.network;https://australia.signum.network;https://canada.signum.network;https://wallet.burstcoin.ro"
+RELIABLE_NODE_HOSTS="https://europe.signum.network;https://canada.signum.network;https://australia.signum.network;https://europe1.signum.network;https://europe2.signum.network;https://europe3.signum.network;https://brazil.signum.network;https://uk.signum.network;https://wallet.burstcoin.ro;"
 CMC_HOST_URL="https://api.coinmarketcap.com/v1/ticker/burst/"
 CRYPTOCOMPARE_HOST_URL="https://min-api.cryptocompare.com/data/histoday?fsym=BURST&tsym=$SYMBOL&limit=100"
 BURSTALERTS_HOST_URL="https://burstalerts.com/api/v1/alerts/"
