--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,7 +31,6 @@
     "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
     "start:android": "react-native run-android",
     "start:metro": "react-native start",
-    "start:devtools": "react-devtools",
     "start": "concurrently npm:start:*",
     "postinstall": "npm run link",
     "link": "react-native link",
@@ -109,20 +108,20 @@
     "@types/react-navigation": "^3.0.7",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.8.1",
-    "babel-jest": "24.8.0",
+    "babel-jest": "^27.0.6",
     "concurrently": "^6.2.0",
-    "jest": "24.8.0",
+    "jest": "^27.0.6",
     "metro-react-native-babel-preset": "0.54.1",
     "react-devtools": "^4.10.4",
     "react-native-cli": "^2.0.1",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.3",
     "sort-json": "^2.0.0",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^27.0.3",
     "tslint": "^5.16.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.9.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged && npm run translations:sort && npm run check"
@@ -132,23 +131,5 @@
       "npm run lint:staged",
       "git add"
     ]
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": [
-      "\\.snap$",
-      "<rootDir>/node_modules/"
-    ],
-    "cacheDirectory": ".jest/cache"
   }
 }
