--- a/mobile/package.json
+++ b/mobile/package.json
@@ -109,6 +109,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^27.0.6",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "concurrently": "^6.2.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "0.54.1",
