--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -18,5 +18,8 @@
 # org.gradle.parallel=true
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_KEY_PASSWORD=my-key-password
+MYAPP_UPLOAD_STORE_PASSWORD=-my-upload-store-password
+
 android.useAndroidX=true
 android.enableJetifier=true
