--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,9 @@
     "dev": "npm run dev:ios",
     "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
     "dev:android": "react-native run-android",
+    "start:android": "react-native run-android",
+    "start:metro": "react-native start",
+    "start": "concurrently npm:start:*",
     "init": "npm install && npm run link",
     "link": "react-native link",
     "lint": "tslint --fix --project tsconfig.json 'src/**/*.{ts,tsx}'",
@@ -48,7 +51,7 @@
     "i18n-js": "^3.2.2",
     "lodash": "^4.17.19",
     "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react-native": "0.63.4",
     "react-native-camera": "^3.35.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-keychain": "^6.1.1",
@@ -70,7 +73,7 @@
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "rn-swipe-button": "^1.2.8"
+    "rn-swipe-button": "^1.2.9"
   },
   "rnpm": {
     "assets": [
@@ -92,6 +95,7 @@
     "@types/react-redux": "^7.0.9",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "24.8.0",
+    "concurrently": "^6.2.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-native-dotenv": "^0.2.0",
