feat: reset form, pt language and some stability fixes

--- a/mobile/.env
+++ b/mobile/.env
@@ -7,3 +7,4 @@ DEFAULT_NODE_HOST="https://europe1.signum.network"
 RELIABLE_NODE_HOSTS="https://europe.signum.network;https://canada.signum.network;https://australia.signum.network;https://europe1.signum.network;https://europe2.signum.network;https://europe3.signum.network;https://brazil.signum.network;https://uk.signum.network;https://wallet.burstcoin.ro;"
 CRYPTOCOMPARE_HOST_URL="https://min-api.cryptocompare.com/data/histoday?fsym=SIGNA&tsym=$SYMBOL&limit=100"
 BURSTALERTS_HOST_URL="https://stage.burstalerts.com/api/v1/alerts/"
+BLACK_LISTED_ACCOUNT_IDS="2806953870868449393"
