--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -111,8 +111,8 @@ android {
         applicationId "com.signum.phoenix"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 5
-        versionName "1.0.4"
+        versionCode 6
+        versionName "1.0.5-beta"
         missingDimensionStrategy 'react-native-camera', 'general'
         ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
     }
