--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -112,7 +112,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 6
-        versionName "1.0.5-beta"
+        versionName "1.0.5"
         missingDimensionStrategy 'react-native-camera', 'general'
         ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
     }
