wip: token transfer form

--- a/web/angular-wallet/proxy.config.json
+++ b/web/angular-wallet/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/burst": {
-    "target": "https://testnetwallet.burstcoin.ro",
+    "target": "https://brazil.signum.network",
     "changeOrigin": true,
     "secure": false,
     "logLevel": "info"
