--- a/mobile/package.json
+++ b/mobile/package.json
@@ -109,6 +109,7 @@
     "concurrently": "^6.2.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "0.54.1",
+    "prettier": "2.4.1",
     "react-devtools": "^4.10.4",
     "react-native-cli": "^2.0.1",
     "react-native-dotenv": "^0.2.0",
