--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -26,11 +26,10 @@
     "build:web": "npm run build -- --configuration=web",
     "build:prod-stats": "npm run build -- --prod --stats-json",
     "test": "jest",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json",
     "test:watch": "jest --watch",
-    "release": "node ../../scripts/publish.js --desktop"
+    "release": "node ../../scripts/publish.js --desktop",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -112,19 +111,19 @@
     "codelyzer": "^5.1.2",
     "cross-env": "^5.2.1",
     "electron": "^12.0.2",
-    "husky": "^3.1.0",
+    "husky": "^7.0.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.9.0",
     "jest-preset-angular": "6.0.2",
+    "lint-staged": "^11.1.2",
+    "prettier": "2.4.1",
     "protractor": "~5.4.0",
     "ts-node": "~8.5.4",
     "tslint": "^5.20.1",
     "typescript": "3.4.5"
   },
-  "husky": {
-    "hooks": {
-      "pre-push": "../../pre-push.sh"
-    }
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
