feat: added testnet node setting

--- a/mobile/.env
+++ b/mobile/.env
@@ -4,7 +4,8 @@
 DEFAULT_PASSCODE_TIME="60000"
 DEFAULT_NODE_HOST="https://europe.signum.network"
 # list of selectable nodes - separate them using ';'
-RELIABLE_NODE_HOSTS="https://europe.signum.network;https://canada.signum.network;https://australia.signum.network;https://europe1.signum.network;https://europe2.signum.network;https://europe3.signum.network;https://brazil.signum.network;https://uk.signum.network;https://wallet.signumcoin.ro;"
+RELIABLE_NODE_HOSTS="https://europe.signum.network;https://canada.signum.network;https://australia.signum.network;https://europe1.signum.network;https://europe2.signum.network;https://europe3.signum.network;https://brazil.signum.network;https://uk.signum.network"
+TESTNET_NODE_HOSTS="https://testnet.burstcoin.network:6876"
 CRYPTOCOMPARE_HOST_URL="https://min-api.cryptocompare.com/data/histoday?fsym=SIGNA&tsym=$SYMBOL&limit=100"
 BURSTALERTS_HOST_URL="https://stage.burstalerts.com/api/v1/alerts/"
 BLACK_LISTED_ACCOUNT_IDS="2806953870868449393"
