--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -75,6 +75,7 @@
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
     "hashicon": "^0.3.0",
+    "is-mobile": "^3.0.0",
     "jsqr": "^1.2.0",
     "lodash": "4.17.21",
     "lokijs": "^1.5.8",
