--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -176,6 +176,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(path: ':@react-native-picker_picker')
+    implementation project(':react-native-community-checkbox')
 
     if (enableHermes) {      
 
