--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -15,6 +15,8 @@ target 'Phoenix' do
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera.podspec"
 
 
+  pod 'RNCPicker', :path => '../node_modules/@react-native-picker/picker'
+
   target 'PhoenixTests' do
     inherit! :complete
     # Pods for testing
