--- a/mobile/package.json
+++ b/mobile/package.json
@@ -40,17 +40,18 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/checkbox": "^0.5.7",
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/checkbox": "^0.5.9",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "^1.0.3",
     "@react-native-community/slider": "^2.0.0",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
-    "@signumjs/core": "^1.0.0-rc.3",
-    "@signumjs/crypto": "^1.0.0-rc.3",
-    "@signumjs/http": "^1.0.0-rc.3",
-    "@signumjs/util": "^1.0.0-rc.3",
+    "@signumjs/core": "^1.0.0-rc.8",
+    "@signumjs/crypto": "^1.0.0-rc.8",
+    "@signumjs/http": "^1.0.0-rc.8",
+    "@signumjs/util": "^1.0.0-rc.8",
     "css-tree": "1.0.0-alpha.39",
     "d3-shape": "^1.3.5",
     "i18n-js": "^3.2.2",
@@ -71,6 +72,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-windows": "^0.66.5",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipeout": "^2.3.6",
