--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -64,6 +64,7 @@
     "angular-calendar": "0.28.2",
     "angular-in-memory-web-api": "0.9.0",
     "angular-notifier": "^6.0.1",
+    "angularx-qrcode": "^2.1.4",
     "bn.js": "^5.0.0",
     "chart.js": "2.9.4",
     "classlist.js": "1.1.20150312",
