--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -64,6 +64,7 @@
     "angular-calendar": "0.28.2",
     "angular-in-memory-web-api": "0.9.0",
     "angular-notifier": "^6.0.1",
+    "angularx-qrcode": "^2.1.4",
     "bn.js": "^5.0.0",
     "chart.js": "2.9.4",
     "classlist.js": "1.1.20150312",
@@ -75,6 +76,7 @@
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
     "hashicon": "^0.3.0",
+    "is-mobile": "^3.0.0",
     "jsqr": "^1.2.0",
     "lodash": "4.17.21",
     "lokijs": "^1.5.8",
