ci: try using ubuntu to build windows

--- a/.github/workflows/build-win-signing-test.yml
+++ b/.github/workflows/build-win-signing-test.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ windows-latest ]
+        os: [ ubuntu-latest ]
         package_manager: [ npm ]
 
     steps:
