feat: a lot of stuff

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -53,10 +53,10 @@
     "@ngrx/store": "7.0.0",
     "@ngrx/store-devtools": "7.0.0",
     "@ngx-translate/core": "11.0.1",
-    "@signumjs/core": "^1.0.0-rc.19",
-    "@signumjs/crypto": "^1.0.0-rc.19",
-    "@signumjs/http": "^1.0.0-rc.19",
-    "@signumjs/util": "^1.0.0-rc.19",
+    "@signumjs/core": "1.0.0-rc.20",
+    "@signumjs/crypto": "1.0.0-rc.20",
+    "@signumjs/http": "1.0.0-rc.20",
+    "@signumjs/util": "1.0.0-rc.20",
     "@swimlane/dragula": "3.8.0",
     "@swimlane/ngx-charts": "12.0.1",
     "@swimlane/ngx-datatable": "15.0.2",
