--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -56,12 +56,13 @@
     "@signumjs/core": "1.0.0-rc.53",
     "@signumjs/crypto": "1.0.0-rc.53",
     "@signumjs/http": "1.0.0-rc.53",
-    "@signumjs/util": "1.0.0-rc.53",
     "@signumjs/standards": "1.0.0-rc.53",
+    "@signumjs/util": "1.0.0-rc.53",
     "@swimlane/dragula": "3.8.0",
     "@swimlane/ngx-charts": "12.0.1",
     "@swimlane/ngx-datatable": "15.0.2",
     "@swimlane/ngx-dnd": "8.0.0",
+    "ang-jsoneditor": "^1.10.5",
     "angular-calendar": "0.28.2",
     "angular-in-memory-web-api": "0.9.0",
     "angular-notifier": "^6.0.1",
