--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open --proxy-config proxy.config.json",
+    "start": "ng serve --open",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
     "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build",
