--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,11 +39,11 @@
     "lint": "lint-staged"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.9",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "^1.0.3",
     "@react-native-community/slider": "^2.0.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/native": "^5.7.2",
@@ -56,8 +56,8 @@
     "d3-shape": "^1.3.5",
     "i18n-js": "^3.2.2",
     "lodash": "^4.17.21",
-    "react": "17.0.2",
-    "react-native": "0.66.0",
+    "react": "18.2.0",
+    "react-native": "0.71.1",
     "react-native-camera": "^3.35.0",
     "react-native-codegen": "^0.0.7",
     "react-native-gesture-handler": "^1.7.0",
@@ -72,12 +72,12 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
-    "react-native-windows": "^0.66.5",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
     "react-native-version-number": "^0.3.6",
+    "react-native-windows": "^0.66.5",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
@@ -90,13 +90,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.11.0",
-    "@babel/runtime": "^7.11.0",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.0.0",
+    "@tsconfig/react-native": "^2.0.2",
     "@types/d3-shape": "^1.3.1",
     "@types/i18n-js": "^3.0.1",
-    "@types/jest": "^24.0.13",
+    "@types/jest": "^29.2.1",
     "@types/lodash": "^4.14.129",
-    "@types/react": "^16.8.17",
+    "@types/react": "^18.0.24",
     "@types/react-native": "^0.57.57",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-svg-charts": "^5.0.2",
@@ -104,22 +107,23 @@
     "@types/react-native-vector-icons": "^6.4.1",
     "@types/react-navigation": "^3.0.7",
     "@types/react-redux": "^7.1.16",
-    "@types/react-test-renderer": "^17.0.0",
-    "babel-jest": "^27.0.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "concurrently": "^6.2.0",
+    "eslint": "^8.19.0",
     "husky": "^7.0.2",
-    "jest": "^27.0.6",
+    "jest": "^29.2.1",
     "lint-staged": "^11.1.2",
-    "metro-react-native-babel-preset": "0.54.1",
+    "metro-react-native-babel-preset": "0.73.7",
     "prettier": "2.4.1",
     "react-devtools": "^4.10.4",
     "react-native-cli": "^2.0.1",
     "react-native-dotenv": "^0.2.0",
-    "react-test-renderer": "^17.0.0",
+    "react-test-renderer": "^18.2.0",
     "sort-json": "^2.0.0",
     "ts-jest": "^27.0.3",
-    "typescript": "^3.9.10"
+    "typescript": "^4.8.4"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
