--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -79,6 +79,7 @@
     "hammerjs": "2.0.8",
     "hashicon": "^0.3.0",
     "is-mobile": "^3.0.0",
+    "jsoneditor": "^9.1.8",
     "jsqr": "^1.2.0",
     "lodash": "4.17.21",
     "lokijs": "^1.5.8",
@@ -92,6 +93,7 @@
     "ngx-electron": "^2.2.0",
     "ngx-mask": "^7.9.10",
     "ngx-skeleton-loader": "^1.2.6",
+    "p-memoize": "^4.0.4",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "^1.23.0",
     "rxjs": "6.5.2",
@@ -99,8 +101,7 @@
     "semver": "^6.3.0",
     "time-ago-pipe": "^1.3.2",
     "web-animations-js": "2.3.2",
-    "zone.js": "0.9.1",
-    "jsoneditor": "^9.1.8"
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.23",
