--- a/mobile/package.json
+++ b/mobile/package.json
@@ -58,16 +58,14 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.1",
-    "react-native-camera": "^3.35.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keychain": "^6.1.1",
     "react-native-localize": "^1.4.1",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-picker-select": "^7.0.0",
     "react-native-push-notification": "^4.0.0",
-    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-qrcode-svg": "^6.1.1",
-    "react-native-reanimated": "^1.10.1",
+    "react-native-reanimated": "^1.13.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-svg": "^12.1.1",
@@ -75,11 +73,13 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
     "react-native-version-number": "^0.3.6",
+    "react-native-vision-camera": "^2.15.2",
     "react-navigation": "^4.4.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "rn-swipe-button": "^1.3.8"
+    "rn-swipe-button": "^1.3.8",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "rnpm": {
     "assets": [
