--- a/mobile/package.json
+++ b/mobile/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/checkbox": "^0.5.9",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/push-notification-ios": "^1.0.3",
     "@react-native-community/slider": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.2.8",
@@ -52,21 +52,20 @@
     "@signumjs/crypto": "^1.0.0-rc.8",
     "@signumjs/http": "^1.0.0-rc.8",
     "@signumjs/util": "^1.0.0-rc.8",
-    "css-tree": "1.0.0-alpha.39",
-    "d3-shape": "^1.3.5",
-    "i18n-js": "^3.2.2",
+    "d3-shape": "^3.2.0",
+    "i18n-js": "^4.2.2",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-keychain": "^6.1.1",
-    "react-native-localize": "^1.4.1",
+    "react-native-keychain": "^8.1.1",
+    "react-native-localize": "^2.2.4",
     "react-native-markdown-package": "^1.8.2",
-    "react-native-qrcode-svg": "^6.1.1",
-    "react-native-reanimated": "^1.13.4",
+    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "^13.7.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
@@ -90,9 +89,9 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.0.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/d3-shape": "^1.3.1",
+    "@types/d3-shape": "^3.1.1",
     "@types/i18n-js": "^3.0.1",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.129",
     "@types/react": "^18.0.24",
     "@types/react-native-dotenv": "^0.2.0",
@@ -102,22 +101,27 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "concurrently": "^6.2.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.19.0",
-    "husky": "^7.0.2",
-    "jest": "^29.2.1",
-    "lint-staged": "^11.1.2",
-    "metro-react-native-babel-preset": "0.73.7",
-    "prettier": "2.4.1",
+    "husky": "^8.0.3",
+    "jest": "^29.4.1",
+    "lint-staged": "^13.1.0",
+    "metro-react-native-babel-preset": "^0.74.1",
+    "prettier": "^2.8.3",
     "react-devtools": "^4.10.4",
     "react-native-cli": "^2.0.1",
-    "react-native-dotenv": "^0.2.0",
+    "react-native-dotenv": "^3.4.7",
     "react-test-renderer": "^18.2.0",
     "sort-json": "^2.0.0",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.8.4"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "overrides": {
+    "react-native-svg-charts": {
+      "react-native-svg": "$react-native-svg"
+    }
   }
 }
