wip: added memoization for token fetching...improving account management:

--- a/web/angular-wallet/src/tsconfig.app.json
+++ b/web/angular-wallet/src/tsconfig.app.json
@@ -2,7 +2,8 @@
     "extends": "../tsconfig.json",
     "compilerOptions": {
         "outDir": "../out-tsc/app",
-        "module": "esnext"
+        "module": "esnext",
+        "allowSyntheticDefaultImports": true,
     },
     "include": [
       "**/*.ts",
