--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -76,6 +76,7 @@
     "d3": "5.14.1",
     "d3-shape": "^1.3.7",
     "date-fns": "^1.30.1",
+    "expiry-map": "^2.0.0",
     "hammerjs": "2.0.8",
     "hashicon": "^0.3.0",
     "is-mobile": "^3.0.0",
