fix: Android compilation, switch everything to Navigation v6, fix env, TypeScript fixes

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -89,7 +89,7 @@ def reactNativeArchitectures() {
 }
 
 android {
-    ndkVersion rootProject.ext.compileSdkVersion
+    ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
