--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,6 +46,7 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/elements": "^1.3.13",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "@signumjs/core": "^1.0.0-rc.8",
@@ -70,8 +71,7 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
     "react-native-version-number": "^0.3.6",
-    "react-native-vision-camera": "^2.15.2",
-    "react-navigation": "^4.4.0",
+    "react-native-vision-camera": "github:ChristophGr/react-native-vision-camera#react-native-0.71",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
