--- a/mobile/package.json
+++ b/mobile/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/push-notification-ios": "^1.0.3",
     "@react-native-community/slider": "^4.4.1",
