--- a/.github/workflows/build-release-desktop.yml
+++ b/.github/workflows/build-release-desktop.yml
@@ -65,6 +65,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
+        if: ${{ matrix.os == 'macos-latest' }}
         uses: actions/setup-python@v4
         with:
           python-version: '2.7'
