--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -6,7 +6,7 @@
   },
   "homepage": "https://phoenix-wallet.rocks",
   "productName": "Phoenix Signum Wallet",
-  "version": "1.5.0-beta",
+  "version": "1.5.0-beta.1",
   "contributors": [
     "ohager",
     "blankey1337",
