--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -6,7 +6,7 @@
   },
   "productName": "Phoenix Signum Wallet",
   "description": "The Signum web wallet",
-  "version": "1.5.0-beta",
+  "version": "1.5.0-beta.1",
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
